# hix5hd2-mmz-lib

./: Makefile  Makefile.am  Makefile.in  configure  configure.ac  mpi_mmz.c  mpi_mmz.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: drv_mem_ioctl.h  hi_debug.h  hi_drv_struct.h  hi_module.h  hi_type.h
