#### hix5hd2-mmz-lib library Makefile ####
AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = libhi_mmz.la
include_HEADERS = include/hi_type.h include/hi_common.h include/hi_debug.h include/hi_module.h

### source list
libhi_mmz_la_SOURCES = mpi_mmz.c
libhi_mmz_la_LDFLAGS = -lpthread
AM_CFLAGS = -I./include

