#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(hi_mmz, 0.10, caps.liu@foxmail.com)
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_SRCDIR([mpi_mmz.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lpthread':
#AC_CHECK_LIB([pthread], [main])

# Checks for header files.
#AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h sys/ioctl.h sys/timeb.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_PID_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
